Fix minor warnings